Added refinement project of pose graph.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,29 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "grid_refine (gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/debug/grid_refine",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}/debug",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "refine_3d (gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/debug/refine_3d",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}/debug",
